--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -29,7 +29,7 @@
       font-size: 3.8rem;
       font-family: $font-special;
       text-decoration: none;
-      color: $color-foreground-dark;
+      color: $color-foreground;
     }
   }
   &__login {
