--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -89,7 +89,7 @@ body {
       font-size: 3.8rem;
       font-family: "Niramit", sans-serif;
       text-decoration: none;
-      color: #b28451; }
+      color: #c69963; }
   .navbar__login {
     grid-area: navbar_login;
     justify-self: end;
