Fixed lane and vs positioning and made it so that localsummoner always gets place on the rightside.

--- a/src/pages/user/UserPage.css
+++ b/src/pages/user/UserPage.css
@@ -157,36 +157,54 @@ body {
   .userSection__matchItem {
     display: grid;
     grid-template-columns: 14rem 5rem 14rem;
-    grid-template-rows: 2rem 6rem 2rem;
-    grid-template-areas: ". . ." "userSection__matchItem__summonerOne . userSection__matchItem__summonerTwo" ". . .";
+    grid-template-rows: 2rem 8rem 2rem;
+    grid-template-areas: ". userSection__matchItem__lane ." "userSection__matchItem__summonerOne userSection__matchItem__versus userSection__matchItem__summonerTwo" ". . .";
     background-color: #232325;
     box-shadow: 0.1rem 0.1rem 1rem 0 black; }
+    .userSection__matchItem__lane {
+      grid-area: userSection__matchItem__lane;
+      align-self: end;
+      justify-self: center;
+      font-size: 1.5rem; }
+    .userSection__matchItem__versus {
+      grid-area: userSection__matchItem__versus;
+      align-self: center;
+      justify-self: center;
+      font-size: 1.3rem; }
     .userSection__matchItem__summonerOne {
       display: grid;
       grid-area: userSection__matchItem__summonerOne;
-      grid-template-columns: 1rem 3rem 6rem 3rem;
+      grid-template-columns: 1rem 3rem 6rem;
       grid-column-gap: 0.2rem;
-      grid-template-areas: ". userSection__matchItem__summonerOne__rank userSection__matchItem__summonerOne__championIcon userSection__matchItem__summonerOne__lane"; }
+      grid-template-areas: ". userSection__matchItem__summonerOne__rank userSection__matchItem__summonerOne__championIcon"; }
       .userSection__matchItem__summonerOne__championIcon {
         grid-area: userSection__matchItem__summonerOne__championIcon;
-        width: 6rem; }
+        width: 8rem; }
       .userSection__matchItem__summonerOne__rank {
-        grid-area: userSection__matchItem__summonerOne__rank; }
-      .userSection__matchItem__summonerOne__lane {
-        grid-area: userSection__matchItem__summonerOne__lane; }
+        grid-area: userSection__matchItem__summonerOne__rank;
+        writing-mode: vertical-rl;
+        font-size: 1.2rem;
+        font-family: "Niramit", sans-serif;
+        transform: rotate(180deg);
+        text-align: center;
+        justify-self: end; }
     .userSection__matchItem__summonerTwo {
       display: grid;
       grid-area: userSection__matchItem__summonerTwo;
-      grid-template-columns: 1rem 3rem 6rem 3rem;
+      grid-template-columns: 1rem 3rem 6rem;
       grid-column-gap: 0.2rem;
-      grid-template-areas: ". userSection__matchItem__summonerTwo__lane userSection__matchItem__summonerTwo__championIcon userSection__matchItem__summonerTwo__rank"; }
+      grid-template-areas: ". userSection__matchItem__summonerTwo__rank userSection__matchItem__summonerTwo__championIcon"; }
       .userSection__matchItem__summonerTwo__championIcon {
         grid-area: userSection__matchItem__summonerTwo__championIcon;
-        width: 6rem; }
+        width: 8rem; }
       .userSection__matchItem__summonerTwo__rank {
-        grid-area: userSection__matchItem__summonerTwo__rank; }
-      .userSection__matchItem__summonerTwo__lane {
-        grid-area: userSection__matchItem__summonerTwo__lane; }
+        grid-area: userSection__matchItem__summonerTwo__rank;
+        writing-mode: vertical-rl;
+        font-size: 1.2rem;
+        font-family: "Niramit", sans-serif;
+        transform: rotate(180deg);
+        text-align: center;
+        justify-self: end; }
   .userSection__summonerName {
     grid-area: userSection__summonerName;
     display: flex;
@@ -246,8 +264,8 @@ body {
     .userSection__menuView__newMatches {
       grid-area: view;
       display: grid;
-      grid-template-columns: minmax(min-content, 35rem);
-      grid-template-rows: repeat(auto-fill, 10rem);
+      grid-template-columns: minmax(min-content, 35em);
+      grid-template-rows: repeat(auto-fill, 12rem);
       grid-row-gap: 2rem; }
     .userSection__menuView__matchHistory {
       grid-area: view; }
