--- a/src/sass/_userSection.scss
+++ b/src/sass/_userSection.scss
@@ -12,6 +12,17 @@
   width: 8rem;
 }
 
+@mixin matchItem__buttonDefaults {
+  border: none;
+  font-size: 2rem;
+  transition: transform 0.1s 0s;
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: $boxShadow-elevate;
+  }
+}
+
 .userSection {
   display: grid;
   grid-area: userSection;
@@ -34,11 +45,23 @@
     grid-template-columns: 4rem 14rem 5rem 14rem 4rem;
     grid-template-rows: 2rem 8rem 2rem;
     grid-template-areas:
-      ". . userSection__matchItem__lane . ."
-      ". userSection__matchItem__summonerOne userSection__matchItem__versus userSection__matchItem__summonerTwo ."
-      ". . . . .";
+      "userSection__matchItem__accept . userSection__matchItem__lane . userSection__matchItem__decline"
+      "userSection__matchItem__accept userSection__matchItem__summonerOne userSection__matchItem__versus userSection__matchItem__summonerTwo userSection__matchItem__decline"
+      "userSection__matchItem__accept . . . userSection__matchItem__decline";
     background-color: $color-background-majority;
     box-shadow: $boxShadow;
+
+    &__accept {
+      grid-area: userSection__matchItem__accept;
+      @include matchItem__buttonDefaults();
+      background-color: #0a8300;
+    }
+
+    &__decline {
+      grid-area: userSection__matchItem__decline;
+      @include matchItem__buttonDefaults();
+      background-color: #a50606;
+    }
 
     &__lane {
       grid-area: userSection__matchItem__lane;
@@ -141,7 +164,7 @@
           font-weight: bold;
         }
 
-        &__clicked {
+        &--clicked {
           background-color: $color-foreground-dark;
         }
       }
