--- a/src/pages/user/UserPage.css
+++ b/src/pages/user/UserPage.css
@@ -291,6 +291,8 @@ body {
       grid-row-gap: 2rem; }
     .userSection__menuView__matchHistory {
       grid-area: view; }
+    .userSection__menuView__champQueue {
+      grid-area: view; }
 
 .footer {
   grid-area: footer;
