--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -9,6 +9,9 @@ $color-scrollbar-background: #27282b;
 
 $color-unhovered-item: #a4a4a4;
 
+$color-accept: #0a8300;
+$color-decline: #a50606;
+
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
