--- a/src/pages/user/UserPage.css
+++ b/src/pages/user/UserPage.css
@@ -302,7 +302,10 @@ body {
       display: grid;
       grid-template-columns: minmax(min-content, 44rem);
       grid-template-rows: repeat(auto-fill, 13rem);
-      grid-row-gap: 2rem; }
+      grid-row-gap: 2rem;
+      overflow: scroll;
+      overflow-x: hidden;
+      border: none; }
       .userSection__menuView__champQueue__object {
         display: grid;
         grid-template-columns: 1rem 10rem 3rem 20rem 5rem 5rem;
