Fixed retrieveMatchMake bug and logic for rendering ready matches.

--- a/src/pages/user/UserPage.css
+++ b/src/pages/user/UserPage.css
@@ -285,17 +285,9 @@ body {
     box-shadow: 0.1rem 0.1rem 1rem 0 black;
     display: grid;
     grid-template-rows: 2rem 65vh;
-    grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 45rem) minmax(min-content, 1fr);
+    grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 43rem) minmax(min-content, 1fr);
     grid-template-areas: ". . ." ". view ."; }
     .userSection__menuView__accountSettings {
-      grid-area: view; }
-    .userSection__menuView__newMatches {
-      grid-area: view;
-      display: grid;
-      grid-template-columns: minmax(min-content, 35rem);
-      grid-template-rows: repeat(auto-fill, 12rem);
-      grid-row-gap: 2rem; }
-    .userSection__menuView__matchHistory {
       grid-area: view; }
     .userSection__menuView__champQueue {
       grid-area: view;
@@ -308,7 +300,7 @@ body {
       border: none; }
       .userSection__menuView__champQueue__object {
         display: grid;
-        grid-template-columns: 1rem 10rem 3rem 20rem 5rem 5rem;
+        grid-template-columns: 1rem 10rem 3rem 23rem 3rem 4rem;
         grid-template-rows: 1rem 11rem 1rem;
         grid-template-areas: ". . . . . userSection__menuView__champQueue__object__delete" ". userSection__menuView__champQueue__object__practiceChampionImg . userSection__menuView__champQueue__object__opponents . userSection__menuView__champQueue__object__delete" ". . . . . userSection__menuView__champQueue__object__delete";
         background-color: #232325;
@@ -336,6 +328,22 @@ body {
           grid-gap: 1rem; }
           .userSection__menuView__champQueue__object__opponents__img {
             width: 5rem; }
+    .userSection__menuView__newMatches {
+      grid-area: view;
+      display: grid;
+      grid-template-columns: minmax(min-content, 35rem);
+      grid-template-rows: repeat(auto-fill, 12rem);
+      grid-row-gap: 2rem;
+      overflow: scroll;
+      overflow-x: hidden; }
+    .userSection__menuView__readyMatches {
+      grid-area: view;
+      display: grid;
+      grid-template-columns: minmax(min-content, 35rem);
+      grid-template-rows: repeat(auto-fill, 12rem);
+      grid-row-gap: 2rem;
+      overflow: scroll;
+      overflow-x: hidden; }
 
 .footer {
   grid-area: footer;
