--- a/src/sass/_userSection.scss
+++ b/src/sass/_userSection.scss
@@ -185,25 +185,13 @@
     grid-template-rows: 2rem 65vh;
     grid-template-columns:
       minmax(min-content, 1fr)
-      minmax(min-content, 45rem)
+      minmax(min-content, 43rem)
       minmax(min-content, 1fr);
     grid-template-areas:
       ". . ."
       ". view .";
 
     &__accountSettings {
-      grid-area: view;
-    }
-
-    &__newMatches {
-      grid-area: view;
-      display: grid;
-      grid-template-columns: minmax(min-content, 35rem);
-      grid-template-rows: repeat(auto-fill, 12rem);
-      grid-row-gap: 2rem;
-    }
-
-    &__matchHistory {
       grid-area: view;
     }
 
@@ -218,7 +206,7 @@
       border: none;
       &__object {
         display: grid;
-        grid-template-columns: 1rem 10rem 3rem 20rem 5rem 5rem;
+        grid-template-columns: 1rem 10rem 3rem 23rem 3rem 4rem;
         grid-template-rows: 1rem 11rem 1rem;
         grid-template-areas:
           ". . . . . userSection__menuView__champQueue__object__delete"
@@ -246,6 +234,28 @@
             width: 5rem;
           }
         }
+      }
+    }
+
+    &__newMatches {
+      grid-area: view;
+      display: grid;
+      grid-template-columns: minmax(min-content, 35rem);
+      grid-template-rows: repeat(auto-fill, 12rem);
+      grid-row-gap: 2rem;
+      overflow: scroll;
+      overflow-x: hidden;
+    }
+
+    &__readyMatches {
+      grid-area: view;
+      display: grid;
+      grid-template-columns: minmax(min-content, 35rem);
+      grid-template-rows: repeat(auto-fill, 12rem);
+      grid-row-gap: 2rem;
+      overflow: scroll;
+      overflow-x: hidden;
+      &__object {
       }
     }
   }
